@@ -1,3 +1,7 @@
+2004-07-23 Scott Dattalo  <scott@dattalo.com>
+	* lcd.cc, lcd.h, lcdengine.cc: updated the LCD I/O pins to the
+	current gpsim implementation.
+
 2004-05-12  Bert Driehuis <driehuis@playbeing.org>
 	* lcd.cc: CGRAM initial value should be 0xff and not 0.
 
